src/modules/blocks/event-datetime/style.pcss
.tribe-editor__separator {
	color: #B9BEC2;
	font-size: 15px;
	font-weight: 500;
}

.tribe-editor__subtitle__headline {
	display: inline-block;
	font-size: 19px;
	font-style: normal;
	font-family: Helvetica, sans-serif, arial;
	font-weight: bold;
	line-height: normal;
	margin-bottom: 0;
	margin-top: 0;

	.button-link {
		color: #060606;
		font-size: 1.1em;
		text-decoration: none;
	}
}

.tribe-editor__subtitle__headline-date {
	font-size: 21px;
}

.tribe-editor__subtitle {

	.tribe-editor__event-cost {
		display: inline-block;
		margin-left: 15px;

		span {
			display: inline-block;
			margin-right: 5px;
		}

		textarea {
			width: 110px;
			display: inline-block;
		}
	}
}

.tribe-editor__subtitle__footer {
	display: flex;
	align-items: center;
	justify-content: space-between;
}

.tribe-editor__subtitle__footer-multiday {

	.components-toggle-control {
		margin: 0;
	}

	.components-toggle-control .components-base-control__field {
		align-items: center;
		font-family: Helvetica, Arial, sans-serif;
	}

	.components-base-control__label {
		margin-right: 8px;
		margin-bottom: 0;
	}

	.components-form-toggle {
		line-height: 18px;
	}
}

.tribe-editor__calendars {
	background-color: #FFF;
	border: 1px solid #E1E3E6;
	border-radius: 3px;
	margin-bottom: 9px;
	padding: 20px 18px;
	width: 100%;
}

.tribe-editor__date-time__date-time-separator-setting,
.tribe-editor__date-time__time-range-separator-setting {

	.components-base-control__field {
		display: flex;
		align-items: center;
	}

	.components-base-control__label {
		flex: auto;
		margin-bottom: 0;
	}

	.components-text-control__input {
		flex: none;
	}
}

.tribe-editor__date-time__date-time-separator-setting,
.tribe-editor__date-time__time-range-separator-setting {

	.components-text-control__input {
		width: 42px;
	}
}

